# IA_Obligatorio

./: README.md
Obligatorio Marzo 2026/Isolation/: README.md  expectimax.py  isolation.ipynb  isolation_env.py  minimax.py  play.py  pyproject.toml
Obligatorio Marzo 2026/MountainCarContinuous/: continuous_mountain_car.ipynb  dyna_q_agent.py  pyproject.toml  q_learning_agent.py
docs/: Informe1.md
