[project]
name = "isolation"
version = "0.1.0"
description = "Ambiente Ejercicio 2 Obligatorio IA"
authors = [
    {name = "iturbideM",email = "martiniturbidenoria@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "gymnasium (>=1.3.0,<2.0.0)",
    "tabulate (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false